<resources>
    <string name="app_name">Daily Islam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Alerm_Set_Toast">আপনার কাঙ্ক্ষিত ওয়াক্তে এলার্ম প্রদান করা হয়েছে।</string>
    <string name="namajer_niom">নামাজের নিয়ম</string>
    <string name="doa_durud">দোয়া ও দুরূদ</string>
    <string name="bisesh_namaj">বিশেষ নামাজ</string>
    <string name="namajer_parthokko">নামাজের\nনিয়ত</string>
    <string name="amol">আমল\nসমূহ</string>
    <string name="shoriot_shobdartho">শরীয়তের\nশব্দার্থ</string>
    <string name="taharat">তাহারাত\n(পবিত্রতা)</string>
    <string name="roajr_somoysuchi">রোজার সময়\nসূচী</string>
    <string name="locationText">অবস্থান\nনির্বাচন</string>
    <string name="App_Widget_Confrm_Text">ডেইলি ইসলাম এপ্লিকেশনের Widget টি আপনার অবস্থান অনুযায়ী প্রতি ওয়াক্তের নামাজের সময়
        প্রদর্শন করে এবং প্রতি ৩০ মিনিট অন্তর-অন্তর হালনাগাদ হয়।</string>
    <string name="kaja1">কোনো ওয়াক্তের ফরজ বা ওয়াজিব নামাজ অন্য নামাজের ওয়াক্তে পড়াকেই ক্বাযা নামাজ বলে।\n

কোনো ব্যক্তি কোনো ওয়াক্তের ফরজ বা ওয়াজিব নামাজ ছেড়ে দিলে তাকে ইহকালে ও পরকালে ভয়ংকর শাস্তি পেতে হবে। তাই কোনো ওয়াক্তের নামাজ ক্বাযা হয়ে গেলে যত তাড়াতাড়ি সম্ভব তত তাড়াতাড়ি ক্বাযা নামাজ আদায় করে নেওয়া উচিত। নিচে ক্বাযা নামাজে আদায় করার নির্দেশনাগুলো দেওয়া হল।\n

১, সুন্নতে মুয়াক্কাদা এবং নফল নামাজ ক্বাযা পড়া যাবে না। তবে ফজরের নামাজ ক্বাযা হলে এর সুন্নত সহ ক্বাযা পড়া উত্তম।\n\n

২, ঘুমের কারণে ক্বাযা হলে ঘুম থেকে উঠেই ক্বাযা পড়া উত্তম (তবে নিষিদ্ধ সময়গুলো বাদ দিয়ে)।\n\n

৩, জুমুআ’র নামাজ ক্বাযা হলে দুই রাকআত ওয়াজিবের পরিবর্তে যোহরের নামাজের ৪ রাকআত ফরজ নামাজ পড়তে হবে। জুমুআ’র ওয়াক্তের সময় নামাজ বাসায় পড়লেও যোহরের নামাজের ৪ রাকআত ফরজ নামাজ পড়তে হবে।\n\n

৪, ভ্রমণের সময়ের কোনো ওয়াক্তের নামাজ ক্বাযা হলে গাড়ি থেকে নেমে অথবা বাসায় ফিরে সেই নামাজ পড়ে নিতে হবে।
    </string>
    <string name="kaja2">৫, যদি দীর্ঘকাল (কয়েক মাস বা বছর) নামাজ ক্বাযা করলে দিন অনুমান করে, বর্তমান ওয়াক্তের সাথে মিল রেখে ধারাবাহিকভাবে ঐ অতীতের ওয়াক্তের নামাজের জন্য নিয়ত করে ক্বাযা পড়তে হবে।
                    </string>
    <string name="kaja3">৬, একাধিক ওয়াক্তের ক্বাযা পড়ার সহজ পদ্ধতি হলো প্রত্যেক ওয়াক্তের ফরজ নামাজের পরে আগের যেকোনো দিনের ক্বাযা আদায় করে নেয়া। কোনো ওয়াক্তের নামাজ ক্বাযা হলে পরের ওয়াক্তের ফরজ নামাজের পরেও নামাজ পড়ে নেওয়া যাবে।
                    </string>
    <string name="kosor1">
        দূরের পথ ভ্রমণ করার সময় বা দূরে কোথাও বেড়াতে বা কাজে গেলে ফরজ ৪ রাকআত নামাজের পরিবর্তে ২ রাকআত নামাজ পড়তে হয় এবং সুন্নতে মুয়াক্কাদা নামাজ মুস্তাহাব হয়ে যায়। নামাজের এই বিধানকে কছর এবং ওই ভ্রমণরত ব্যক্তিকে মুসাফির বলা হয়।\n\n

কতদূর গেলে কেউ মুসাফির হবে সে বিষয়ে হাদিস রয়েছে। হাদিসটি নিচে দেওয়া হল।\n\n

ইমাম বুখারি রহ. বলেন, “ইবনে উমর (রাঃ) এবং ইবনে আব্বাস (রাঃ) ৪ বারীদ সফরের সময় কছর পড়া এবং রোজা ভাঙ্গার কথা বলেছেন। আর সেটি হল, ১৬ ফরসখ” (সহিহ বুখারি, নামাজ কছর করা অধ্যায়)।\n\n

১ বারীদ ১২ মাইল হয়ে থাকে আর ১ ফরসখ ৩ মাইল হয়ে থাকে। সুতরাং ৪ (বারীদ) কে ১২ দিয়ে গুণ দিলে কিংবা ১৬ (ফরসখ) কে ৩ দিয়ে গুণ দিলে পাওয়া যায় ৪৮ মাইল (প্রায় ৭৭.২৫ কিলোমিটার)। নিচে কছর নামাজ আদায় করার নির্দেশনাগুলো দেওয়া হল।\n\n

১, দুই অথবা তিন রাকআত বিশিষ্ট ফরজ ও ওয়াজিব নামাজের জন্য কছর নেই, সুতরাং ফযর, মাগরিব ও বিতরের নামাজ যথাক্রমে দুই, তিন, ও তিন রাকআতই পড়তে হবে।\n\n

২, যোহর, আছর ও এশার নামাজ কছরের জন্য কেবল দুই রাকআত পড়তে হবে। চার রাকআত পড়লে গুনাহ হবে এবং নামাজ শুদ্ধ হবে না, আবার আদায় করতে হবে। তবে যদি কেউ ভুলে চার রাকআত পড়ে ফেলে কিন্তু শেষ বৈঠকের আগে ভুল বুঝতে পেরে সিজদাহে সাহু করে নেয়, তাহলে নামাজ শুদ্ধ হবে।\n\n

৩, ভ্রমণ অবস্তায় সুন্নতে মুয়াক্কাদা নামাজ নফলে পরিণত হয়, গন্তব্যস্থলে পৌঁছানোর আগ পর্যন্ত না পড়ায় ভাল। তবে ফযরের ফরজ নামাজের আগের দুই রাকআত সুন্নত নামাজ পড়াই উত্তম, কারণ এই দুই রাকআত সুন্নতে মুয়াক্কাদা ওয়াজিবের মত গুরুত্বপূর্ণ। গন্তব্যস্থলে পৌঁছানোর পরে ব্যস্ততা না থাকলে অন্য ওয়াক্তের সুন্নতে মুয়াক্কাদা নামাজও পড়া যাবে।\n\n

৪, কেউ যদি ১৫ বা তার বেশিদিনের জন্য দূরে কোথাও বেড়াতে বা কাজে যায় তাহলে সে আর মুসাফির থাকবে না। তাকে সব নামাজ পূর্ণরূপে পড়তে হবে। তবে নিয়ত বেশিদিনের হলে কছর পড়া যাবে না আর নিয়ত কমদিনের হলে কছর পড়তে হবে।\n\n

৫, মসজিদে জামআতের সাথে নামাজ পড়লে মুসাফিরকে ফরজ নামাজ পূর্ণরূপেই পড়তে হবে (ইমামকে অনুসরণ করা ফরজ)। অনুরূপভাবে, নিজের শ্বশুরবাড়ি বা নিজের অন্য কোনো বাড়ি যদি ৭৭.২৫ কিলোমিটার বা তার বেশি দূরেও অবস্থিত হয় তবুও সব নামাজ পূর্ণরূপে পড়তে হবে।


    </string>
    <string name="kosor2">৫, মসজিদে জামআতের সাথে নামাজ পড়লে মুসাফিরকে ফরজ নামাজ পূর্ণরূপেই পড়তে হবে (ইমামকে অনুসরণ করা ফরজ)। অনুরূপভাবে, নিজের শ্বশুরবাড়ি বা নিজের অন্য কোনো বাড়ি যদি ৭৭.২৫ কিলোমিটার বা তার বেশি দূরেও অবস্থিত হয় তবুও সব নামাজ পূর্ণরূপে পড়তে হবে।
    </string>
    <string name="kosor3">৬, মুকিম (যে মুসাফির না), অবস্তার ক্বাযা নামাজ মুসাফির অবস্তায় পড়লে পূর্ণরূপেই পড়তে হবে এবং মুসাফির অবস্তার ক্বাযা নামাজ মুকিম অবস্তায় পড়লে কছরই পড়তে হবে।\n
    </string>
    <string name="bitor1">এশার নামাজের পরে তিন রাকআত ওয়াজিব নামাজ পড়তে হয়, একেই বিতরের নামাজ বলা হয়।\n\nবিতর নামাজ পড়া ওয়াজিব। রমজান মাস ব্যতীত অন্য সকল মাসে বিতরের নামাজ নিজে নিজে পড়তে হয়। রমজান মাসে তারাবিহ নামাজ পড়ার পর ইমামের সঙ্গে জামআতে বিতর নামাজ পড়া যায়। নিচে বিতরের নামাজ আদায় করার নির্দেশনাগুলো দেওয়া হল।\n\n১, বিতরের নামাজের প্রথম দুই রাকআত ফরজ নামাজের মত আদায় করতে হয়।\n\n২, তৃতীয় রাকআতে কিরআত (সূরা ফাতিহা ও অন্য একটি সূরা পড়া) করার পরে নিঃশব্দে দুয়ায়ে কুনুত পড়তে হয়।


</string>
    <string name="bitor2">৩, দুয়ায়ে কুনুত পড়ার পরে ফরজ নামাজের শেষ রাকআতের মত রুকু, সিজদাহ, শেষ বৈঠকে তাশাহহুদ, দুরুদে ইব্রাহীম ও দুয়ায়ে মাছুরা পড়ে সালাম ফিরানোর মাধ্যমে বিতরের নামাজ শেষ করতে হয়।
</string>
    <string name="bitor3">৪, তৃতীয় রাকআতে দুয়ায়ে কুনুত পড়তে ভুলে গেলে অথবা প্রথম বা দ্বিতীয় রাকআতে দুয়ায়ে কুনুত পড়ে ফেললে নামাজের শেষ বৈঠকে তাশাহহুদের পরে সিজদাহে সাহু করতে হবে।
</string>
    <string name="juma1">প্রতি শুক্রবার যোহরের নামাজের ওয়াক্তে যোহরের নামাজের পরিবর্তে জুমুআর নামাজ পড়তে হয়।
</string>
    <string name="juma2">জুমুআর নামাজ ফরজে আইন। জুমুআর নামাজ মোট বার রাকআত, খুতবার আগে চার রাকআত সুন্নতে মুয়াক্কাদা (কাবলাল জুমুআ), খুতবার পরে জামআতের সাথে দুই রাকআত ফরজ, আর ফরজ নামাজের পরে আরও চার রাকআত সুন্নতে মুয়াক্কাদা (বা’দাল জুমুআ) এবং সবশেষে দুই রাকআত সুন্নতে গায়েরে মুয়াক্কাদা পড়তে হয়। নিচে জুমুআর নামাজ আদায় করার নির্দেশনাগুলো দেওয়া হল।
</string>
    <string name="juma3">জুমুআর দুই রাকআত ফরজ নামাজ সাধারণ ফরজ নামাজের মতই। মসজিদে খুতবা শুরুর আগেই গিয়ে কাবলাল জুমুআর জন্য নিয়ত করে চার রাকআত সুন্নতে মুয়াক্কাদা নামাজ একা পড়ে নিতে হবে। তারপরে দ্বিতীয় আজান দেওয়া হবে এবং আজান শেষে খতিব খুতবা শুরু করবে। খুতবা শোনা ওয়াজিব, এই সময়ে তাহিয়্যাতুল মসজিদ নামাজ ব্যতীত অন্য কোনো নামাজ না পড়াই উত্তম। খুতবার সময় কারো সাথে কথা বলা বা খুতবা শুনতে ব্যঘাত ঘটে এমন কোনো কাজ করা হারাম। খুতবা শেষ হলে ফরজ নামাজের জন্য জামআতে দাঁড়াতে হবে এবং ইমামের সাথে পড়তে হবে। ফরজ নামাজ শেষ হলে মুনাজাত হবে। মুনাজাতের পরে চার রাকআত সুন্নতে মুয়াক্কাদা ও দুই রাকআত সুন্নতে গায়েরে মুয়াক্কাদা একা পড়ে নিতে হবে।
</string>
    <string name="eid1">প্রতি বছর উভয় ঈদের দিন সকালে ঈদগাহে অথবা মসজিদে জামআতের সাথে দুই রাকআত নামাজ পড়তে হয়।\n\n

ঈদুল ফিতর ও ঈদুল আযহা এই দুই ঈদের নামাজের নিয়ম একই। কেবল নিয়ত ভিন্ন হবে। উভয় ঈদের নামাজই ওয়াজিব। ঈদের নামাজ নিচে ঈদের নামাজ আদায় করার নির্দেশনাগুলো দেওয়া হল।\n\n

১, ঈদের নামাজের জন্য আজান এবং ইকামত দিতে হয়না।\n\n

২, “আমি ইমামের সাথে ঈদের দুই রাকআত ওয়াজিব নামাজ পড়ছি” এই কথা খেয়াল রেখে নামাজের নিয়ত করতে হবে।\n\n

৩, সাধারণ দুই রাকআত নামাজে যে কয়বার তাকবীরে তাহরীমা পড়তে হয় তার থেকে ছয়বার অতিরিক্ত তাকবীরে তাহরীমা পড়তে হবে।\n\n

৪, প্রথম রাকআতে তাকবীরে তাহরীমা, হাত বাঁধা ও সানা পড়ার পরে হাত ছেড়ে দিয়ে তিনবার অতিরিক্ত তাকবীরে তাহরীমা পড়তে হবে। প্রথম দুইবার হাত কান পর্যন্ত তুলে হাত ছেড়ে দিতে হবে এবং তৃতীয়বার হাত বাঁধতে হবে।\n\n

৫, দ্বিতীয় রাকআতের কিরাআতের পরে ও রুকুর আগে বাকি তিনবার অতিরিক্ত তাকবীরে তাহরীমা পড়তে হবে। তিনবারই হাত কান পর্যন্ত তুলে হাত ছেড়ে দিতে হবে এবং সাধারণ নিয়মের তাকবীরে তাহরীমাটি পড়ে রুকুতে যেতে হবে।\n\n

৬, ইমাম দ্বিতীয় রাকআতের রুকুর আগে অতিরিক্ত তাকবীরে তাহরীমা পড়তে ভুলে গেলে অথবা মুক্তাদি দ্বিতীয় রাকআতের অতিরিক্ত তাকবীরে তাহরীমার পরে নামাজে অংশ নিলে রুকুতে থাকা অবস্তায় নিঃশব্দে অতিরিক্ত তাকবীরে তাহরীমা পড়ে নিবে। রুকু ভেঙ্গে আবার দাঁড়িয়ে অতিরিক্ত তাকবীরে তাহরীমা পড়া যাবে না। কিন্তু রুকুর পরে দাঁড়িয়ে অতিরিক্ত তাকবীরে তাহরীমা পড়লেও চলবে, সিজদাহে সাহু করতে হবে না।\n\n

৭, নামাজের পর ইমাম মুক্তাদিদের দিকে মুখ করে খুতবা পড়বেন। ঈদের নামাজের পড়ে খুতবা পড়া সুন্নত আর শোনা ওয়াজিব।\n\n

৮, ঈদের নামাজ জামআত ছাড়া একা শুরু করা যাবে না। মসজিদ বা ঈদগাহের নামাজ শেষ হয়ে গেলে যারা জামআতে অংশ নিতে পারেনি তারা একত্রে নতুন জামআত করতে পারবে। একই ইমাম বা মুক্তাদিরা একবারের বেশি ঈদের নামাজ পড়তে পারবে না।\n\n


ঈদুল আযহার কিছু ওয়াজিব আছে। সেগুলো নিচে দেওয়া হল।\n\n

১, ৯ ই জিলহজ্জ (হজ্জ শুরুর দিন) ফযর থেকে ১৩ ই জিলহজ্জ আছর পর্যন্ত
মোট ২৩ ওয়াক্ত ফরজ নামাজ জামআতে পড়ার পরে তাকবীরে তাশরীক (আল্লাহু আকবর আল্লাহু আকবর লা-ইলাহা ইল্লাল্লাহু ওয়াল্লাহু আকবর আল্লাহু আকবর ওয়া লিল্লাহিল হামদ) পড়া ওয়াজিব।\n\n

২, তাকবীরে তাশরীক উচ্চস্বরে বলা ওয়াজিব। মহিলারা নিঃশব্দে পড়বে।

</string>
    <string name="eid2">৩, ফরজ নামাজের সালাম দেওয়া শেষ হলেই তাকবীরে তাশরীক পড়তে হবে।
</string>
    <string name="eid3">৪, ইমাম তাকবীরে তাশরীক পড়ার কথা ভুলে গেলে মুক্তাদিরা উচ্চস্বরে তাকবীরে তাশরীক পড়া শুরু করবে। ইমামের অপেক্ষায় বসে থাকা যাবে না। ফরজ নামাজ একা শেষ করলেও তাকবীরে তাশরীক পড়তে হবে।
</string>
    <string name="rojarniot">রোজার নিয়ত</string>
    <string name="rojarfozilot">রোজার ফজিলত</string>
    <string name="sunnotkhabar">ইফতারে সুন্নত খাবার</string>
    <string name="sokriya">ইফতারের আগে ও পরে ইসতেগফার-শোকরিয়া আদায় করে দোয়া পড়া </string>
    <string name="chardoa">বিশ্বনবি বলেছেন এই রোজার মাসে তোমরা ৪টি কাজ বেশি বেশি কর</string>
    <string name="tarabirnamaj">তারাবিহ নামাজ পড়ার নিয়ম ও নিয়ত</string>
    <string name="karonchara">কারণ ছাড়া রোজা না রাখলে যা হবে</string>
    <string name="vanga">রোজা ভাঙ্গা ও হাল্কা হবার কারণ</string>
    <string name="kaffara">রোজার কাফফারা</string>
    <string name="vuldharona">রোজা নিয়ে কিছু ভুল ধারণা</string>
    <string name="brash">রোজা অবস্থায় ব্রাশ-পেস্ট ও মেসওয়াক ব্যবহার করা যাবে কী</string>
    <string name="rohomot">রমজানকে রহমত, মাগফিরাত ও নাজাতের মাস বলার কারন</string>
    <string name="danerfozilot">রোজার মাসে দান করার ফযিলত</string>
    <string name="jannat_jahannam">জান্নাত লাভ ও জাহান্নাম থেকে মুক্তির দোয়া</string>
    <string name="fitra">ফিতরাহ</string>
    <string name="nirdes">রোজা পালনের নির্দেশ ও উপদেশ</string>
    <string name="itekaf">ইতেকাফ</string>
    <string name="rojobmash">রজব মাসে বরকতের দোয়া</string>
</resources>